--- a/index.html
+++ b/index.html
@@ -4,58 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Grid Example</title>
-    <style>
-        .button {
-            width: 100px;
-            height: 50px;
-            background-color: #ffffff;
-            border-radius: 5px;
-        }
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.css" rel="stylesheet" />
 
-        .line-left {
-            width: 1px;
-            height: 100%;
-            background-color: #000000;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        .line-right {
-            width: 1px;
-            height: 100%;
-            background-color: #000000;
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-    </style>
 </head>
 
 <body>
 
-    <div class="relative inline-block text-left">
-        <div class="group">
-            <button type="button" class="inline-flex justify-center items-center w-full px-4 py-2 text-sm font-medium text-white bg-gray-800 hover:bg-gray-700 focus:outline-none focus:bg-gray-700">
-                Open Menu
-                <!-- Dropdown arrow -->
-                <svg class="w-4 h-4 ml-2 -mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M10 12l-5-5h10l-5 5z" />
-                </svg>
-            </button>
 
-            <!-- Dropdown menu -->
-            <div class="absolute left-0 w-40 mt-1 origin-top-left bg-white divide-y divide-gray-100 rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition duration-300">
-                <div class="py-1">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Option 1</a>
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Option 2</a>
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Option 3</a>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+
+    <div onclick="location.href='http://www.example.com';" style="cursor:pointer;">Tuấn</div>
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
+
 
 </body>
 
