--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Latest compiled and minified JavaScript -->
 </head>
 
-<body>
+<body class="px-40">
     
     <div class="relative inline-block text-left">
         <div>
